# Calculation-and-Visualization-From-CSV-File

./: LICENSE  README.md  pyproject.toml  setup.py
src/Formula_Monk_assessment/: Main.py  __init__.py  calculate_statistics.py  data_analysis.py  data_processing.py  data_visualization.py  filtered_data.csv  weekly_data.csv
tests/: test_analysis.py
