[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FormulaMonk_assessment"
version = "0.1.0"
description = "A package for analyzing Apple time series data"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT License"}
authors = [
    {name = "Naresh Upadhyay", email = "naresh74@gmail.com"}
]
dependencies = [
    "pandas",
    "plotly"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/naresy/Formula_Monk_Assessment.git"
